# esp-idf-lib

./: CMakeLists.txt
components/esp_idf_lib_helpers/: esp_idf_lib_helpers.h
components/i2cdev/: Kconfig.projbuild
